Updated role name to nutanix_prism_role_get_info

--- a/tasks/common/get_cluster_uuids.yml
+++ b/tasks/common/get_cluster_uuids.yml
@@ -10,7 +10,7 @@
 
 - name: Get clusters list
   uri:
-    url: "{{ prism_central_api_v3 }}/clusters/list"
+    url: "{{ prism_api_v3 }}/clusters/list"
     body:
       kind: cluster
       sort_order: ASCENDING
