--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Ross Davies
-  description: Ansible role to gather data and store it in Ansible facts to the Nutanix API
-  role_name: nutanix_role_get_info
+  description: Ansible role to gather data from Prism and store it in Ansible facts to the Nutanix API
+  role_name: nutanix_prism_role_get_info
   namespace: grdavies
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -51,4 +51,4 @@ galaxy_info:
 dependencies:
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  - grdavies.nutanix_role_init_api
+  - grdavies.nutanix_prism_role_init_api
