Added default facts for each PC service status pre-set to false. Updated where clause to match correct formatting on main.yml tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,10 @@
 - import_tasks: common/main.yml
   when: session_cookie is defined
 - import_tasks: pc/main.yml
-  when: >
-    ( session_cookie is defined )
-    ( prism_type == "pc" )
+  when:
+    - session_cookie is defined
+    - prism_type == "pc"
 - import_tasks: pe/main.yml
   when: >
-    ( session_cookie is defined )
-    ( prism_type == "pe" )
+    - session_cookie is defined
+    - prism_type == "pe"
